Key columns fixed, text input box and text display are off center

--- a/src/styles/body.css
+++ b/src/styles/body.css
@@ -31,9 +31,8 @@ body {
 }
 
 .main {
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
-    /* flex-direction: column; */
-    /* height: 300px; */
+    height: 300px;
 }
